# ckrafte_table

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  iniciar.bat  main.py  multi-agente-local.code-workspace  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  secret-scan.yml
backend/: app.py  routes.py  shared_contracts.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
infra/docker/: backend.Dockerfile  frontend.Dockerfile
infra/scripts/: bootstrap-linux.sh  bootstrap-windows.ps1  dev-all.ps1
output/: .gitkeep
shared/: agent-models.json
src/agents/: team.py
src/crews/: dev_crew.py
src/interfaces/: cli.py  commands.py  launcher.py
src/sessions/: manager.py
