[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ckrafte_table"
version = "0.1.0"
description = "Proyecto ckrafte_table para generar entregables tecnicos con agentes IA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai-agents>=0.17.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.6.0",
  "rich>=13.7.0",
]

[project.scripts]
ckrafte_table = "src.interfaces.cli:main"
ckrafte_table-doctor = "src.interfaces.commands:doctor_cmd"
ckrafte_table-usage = "src.interfaces.commands:usage_cmd"
ckrafte_table-start = "src.interfaces.commands:start_cmd"
ckrafte_table-demo = "src.interfaces.commands:demo_cmd"
ckrafte_table-launcher = "src.interfaces.launcher:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src", "src.*"]
